--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
+    "resend": "^0.17.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
