--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "framer-motion": "^10.12.22",
     "keen-slider": "^6.8.6",
     "next": "13.4.9",
     "postcss": "8.4.25",
